--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -6,6 +6,7 @@
       <li><i class="fa fa-check fa-lg"></i>&nbsp;&nbsp;&nbsp;Ruby on Rails</li>
       <li><i class="fa fa-check fa-lg"></i>&nbsp;&nbsp;&nbsp;CSS</li>
       <li><i class="fa fa-check fa-lg"></i>&nbsp;&nbsp;&nbsp;HTML</li>
+      <li><i class="fa fa-check fa-lg"></i>&nbsp;&nbsp;&nbsp;HAML</li>
     </ul>
   </div>
 
