minor edits to about page + projects carousel

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -7,6 +7,7 @@
       <li><i class="fa fa-check fa-lg"></i>&nbsp;&nbsp;&nbsp;CSS</li>
       <li><i class="fa fa-check fa-lg"></i>&nbsp;&nbsp;&nbsp;HTML</li>
       <li><i class="fa fa-check fa-lg"></i>&nbsp;&nbsp;&nbsp;HAML</li>
+      <li><i class="fa fa-check fa-lg"></i>&nbsp;&nbsp;&nbsp;Twitter Bootstrap</li>
     </ul>
   </div>
 
@@ -43,7 +44,7 @@
           <br>
         </div>
       </div>
-      <div class="item">
+      <!-- <div class="item">
         <div class="inner-item">
           <%= link_to image_tag("rsz_google.jpg", :alt => "http://www.google.com"), "http://www.google.com", :target => "_blank" %>
       </div>
@@ -58,7 +59,7 @@
         <div class="carousel-caption">
           <p>About.me</p>
         </div>
-      </div>
+      </div> -->
     </div>
 
     <!-- Controls -->
