--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,8 +30,8 @@
         <%= link_to image_tag('aboutmeicon.jpg'), 'http://about.me/melzhang', target: "_blank" %>
       </div> -->
       <ul class="nav">
-        <li class="links"><a href="<%= root_path %>#About">About</a></li>
-        <li class="links"><a href="<%= root_path %>#Projects">Projects</a></li>
+        <li class="links button"><a href="<%= root_path %>#About">About</a></li>
+        <li class="links button"><a href="<%= root_path %>#Projects">Projects</a></li>
         <!-- <li class="links"><a href="<%= root_path %>#Projects">Interests</a></li> -->
         <!-- <li class="links"><%= link_to "Contact", new_contact_path %></li> -->
       </ul>
