--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -7,6 +7,9 @@
 */
 @import url(http://fonts.googleapis.com/css?family=Josefin+Sans:300|Kaushan+Script|Lato|Alegreya+Sans+SC|Poiret+One|La+Belle+Aurore|Swanky+and+Moo+Moo|Special+Elite|Delius|Amaranth|Architects+Daughter|Over+the+Rainbow);
 
+.navbar .button a {
+  padding: 3px !important;
+}
 
 .aboutmeicon {
   margin-left: 450px;
