--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -8,6 +8,17 @@
       <li><i class="fa fa-check fa-lg"></i>&nbsp;&nbsp;&nbsp;HTML</li>
       <li><i class="fa fa-check fa-lg"></i>&nbsp;&nbsp;&nbsp;HAML</li>
       <li><i class="fa fa-check fa-lg"></i>&nbsp;&nbsp;&nbsp;Twitter Bootstrap</li>
+      <li><i class="fa fa-check fa-lg"></i>&nbsp;&nbsp;&nbsp;Git/GitHub</li>
+      <li><i class="fa fa-check fa-lg"></i>&nbsp;&nbsp;&nbsp;Adobe Photoshop</li>
+    </ul>
+    <ul class="skills">
+      <li><i class="fa fa-check fa-lg"></i>&nbsp;&nbsp;&nbsp;Ruby on Rails</li>
+      <li><i class="fa fa-check fa-lg"></i>&nbsp;&nbsp;&nbsp;CSS</li>
+      <li><i class="fa fa-check fa-lg"></i>&nbsp;&nbsp;&nbsp;HTML</li>
+      <li><i class="fa fa-check fa-lg"></i>&nbsp;&nbsp;&nbsp;HAML</li>
+      <li><i class="fa fa-check fa-lg"></i>&nbsp;&nbsp;&nbsp;Twitter Bootstrap</li>
+      <li><i class="fa fa-check fa-lg"></i>&nbsp;&nbsp;&nbsp;Git/GitHub</li>
+      <li><i class="fa fa-check fa-lg"></i>&nbsp;&nbsp;&nbsp;Adobe Photoshop</li>
     </ul>
   </div>
 
@@ -15,7 +26,7 @@
     <h1 class="bio-header">About Me</h1>
     <br>
     <p>Hi there, I’m Mel Zhang, a Ruby on Rails developer.</p>
-    <p>I studied neuroscience at Wellesley College with the (rather limited) mindset that my future either lay in scientific research or medicine. Originally my plan was to go into medicine (neurology is very interesting), but I realized I wanted more opportunity for creativity, innovation, and collaboration, and that I enjoyed working with computers. After being introduced to Marc Andreessen’s 2011 article "<%= link_to 'Why Software Is Eating the World', 'http://online.wsj.com/news/articles/SB10001424053111903480904576512250915629460' %>", I became excited for the potential that technology has to change industries (such as healthcare and education) and to improve people’s lives. With the wide array of online resources available, I've been teaching myself Ruby on Rails, CSS, HTML, jQuery, and more. Although there is so much to learn, I’ve realized that climbing up steep learning curves is one of the most challenging, yet rewarding, parts of life. </p>
+    <p>I studied neuroscience at Wellesley College with the (rather limited) mindset that my future either lay in scientific research or medicine. Originally my plan was to go into medicine (neurology is very interesting), but I realized I wanted more opportunity for creativity, innovation, and collaboration, and that I enjoyed working with computers. After being introduced to Marc Andreessen’s 2011 article "<%= link_to 'Why Software Is Eating the World', 'http://online.wsj.com/news/articles/SB10001424053111903480904576512250915629460' %>", I became excited for the potential that technology has to change industries (such as healthcare and education) and to improve people’s lives. With the wide array of online resources available, I've been teaching myself Ruby on Rails, CSS, HTML, MySQL, and more. Although there is so much to learn, I’ve realized that climbing up steep learning curves is one of the most challenging, yet rewarding, parts of life. </p>
 </div>
 </div>
 
