--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -26,10 +26,17 @@
 
 
   <div class="bio">
-    <h1 class="bio-header">About Me</h1>
+    <h1 class="bio-header">About Mel</h1>
     <br>
-    <p>Hi there, I’m Mel Zhang, a Ruby on Rails developer.</p>
-    <p>I studied neuroscience at Wellesley College with the (rather limited) mindset that my future either lay in scientific research or medicine. Originally my plan was to go into medicine (neurology is very interesting), but I realized I wanted more opportunity for creativity, innovation, and collaboration, and that I enjoyed working with computers. After being introduced to Marc Andreessen’s 2011 article "<%= link_to 'Why Software Is Eating the World', 'http://online.wsj.com/news/articles/SB10001424053111903480904576512250915629460' %>", I became excited for the potential that technology has to change industries (such as healthcare and education) and to improve people’s lives. With the wide array of online resources available, I've been teaching myself Ruby on Rails, CSS, HTML, MySQL, and more. </p>
+    <ul class="aboutlist">
+      <li class="aboutlist">Self-taught Ruby on Rails developer.</li>
+      <li class="aboutlist">Earned a Neuroscience B.A. (Has fond memory of being bitten by a lab rat.)</li>
+      <li class="aboutlist">Changed career direction after reading Marc Andreessen’s 2011 article "<%= link_to 'Why Software Is Eating the World', 'http://online.wsj.com/news/articles/SB10001424053111903480904576512250915629460' %>".</li>
+      <li class="aboutlist">Likes health & tech.</li>
+
+    <p></p>
+    <p></p>
+    <!-- <p>I studied neuroscience at Wellesley College with the (rather limited) mindset that my future either lay in scientific research or medicine. Originally my plan was to go into medicine (neurology is very interesting), but I realized I wanted more opportunity for creativity, innovation, and collaboration, and that I enjoyed working with computers. After being introduced to Marc Andreessen’s 2011 article "<%= link_to 'Why Software Is Eating the World', 'http://online.wsj.com/news/articles/SB10001424053111903480904576512250915629460' %>", I became excited for the potential that technology has to change industries (such as healthcare and education) and to improve people’s lives. With the wide array of online resources available, I've been teaching myself Ruby on Rails, CSS, HTML, MySQL, and more. </p> -->
 </div>
 </div>
 
