--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -14,6 +14,12 @@
   position: relative;
 }
 
+.aboutlist {
+  /*ist-style-type: none;*/
+  font-size: 18px;
+  margin-bottom: 12px;
+}
+
 .about {
   position: relative;
   padding-top: 100px;
