--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -104,6 +104,22 @@ html {
   }
 }
 
+.footer-github {
+  position: absolute;
+  margin-left: 280px;
+  margin-top: -25px;
+  display: inline-block !important;
+  height: 25px;
+  width: 25px;
+}
+
+.footer-github a {
+  &:hover {
+    background-color: transparent;
+    text-decoration: none;
+  }
+}
+
 .footer-text {
   margin-top: 6px;
   padding-left: 30px;
