--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -5,7 +5,7 @@
  *= require_self
  *= require_tree .
 */
-@import url(http://fonts.googleapis.com/css?family=Josefin+Sans:300|Kaushan+Script|Lato|Alegreya+Sans+SC|Poiret+One|La+Belle+Aurore|Swanky+and+Moo+Moo|Special+Elite|Delius|Amaranth|Architects+Daughter|Over+the+Rainbow);
+@import url(http://fonts.googleapis.com/css?family=Josefin+Sans:300|Kaushan+Script|Alegreya+Sans+SC|Poiret+One|La+Belle+Aurore|Swanky+and+Moo+Moo|Special+Elite|Delius|Amaranth|Architects+Daughter|Over+the+Rainbow|Lato:400,700);
 
 .navbar .button a {
   padding: 3px !important;
