--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -77,15 +77,16 @@
           <br>
         </div>
       </div>
-      <!-- <div class="item">
+      <div class="item">
         <div class="inner-item">
-          <%= link_to image_tag("rsz_google.jpg", :alt => "http://www.google.com"), "http://www.google.com", :target => "_blank" %>
+          <%= link_to image_tag("rsz_inspirez.jpg", :alt => "http://inspirez.herokuapp.com"), "http://inspirez.herokuapp.com", :target => "_blank" %>
       </div>
         <div class="carousel-caption">
-          <p>GOOGLE</p>
+          <p>- INSPIREZ -</p>
+          <p>Take a break and read a random quote or watch a YouTube video</p>
         </div>
       </div>
-      <div class="item">
+      <!--<div class="item">
         <div class="inner-item">
           <%= link_to image_tag("rsz_aboutme.jpg", :alt => "about.me/melzhang"), "about.me/melzhang", :target => "_blank" %>
         </div>
