resized inspirez screenshot jpg and then precompiled assets

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -68,7 +68,7 @@
     <div class="carousel-inner">
       <div class="item active">
         <div class="inner-item">
-          <!--height:430px, width:700px-->
+          <!--height:460px, width:800px-->
            <%= link_to image_tag("sl.jpg"), "http://startups.mankindforward.com/", :target => "http://startups.mankindforward.com/" %>
         </div>
         <div class="carousel-caption">
@@ -83,7 +83,7 @@
       </div>
         <div class="carousel-caption">
           <p>- INSPIREZ -</p>
-          <p>Take a break and read a random quote or watch a YouTube video</p>
+          <p>Get inspired. Take a break and read a random quote or watch a YouTube video.</p>
         </div>
       </div>
       <!--<div class="item">
