minor text edit

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -69,7 +69,7 @@
       <div class="item active">
         <div class="inner-item">
           <!--height:460px, width:800px-->
-           <%= link_to image_tag("sl.jpg"), "http://startups.mankindforward.com/", :target => "http://startups.mankindforward.com/" %>
+           <%= link_to image_tag("sl.jpg"), "http://startups-mankindforward.herokuapp.com/", :target => "http://startups-mankindforward.herokuapp.com/" %>
         </div>
         <div class="carousel-caption">
           <p>- Startup Landscapes -</p>
