--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -142,7 +142,7 @@ li.links {
 
 .carousel-caption p {
   font-family: Lato !important;
-  font-weight: 300;
+  font-weight: 300 !important;
   font-size: 16px;
 }
 
