--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -38,7 +38,7 @@
       <li class="aboutlist">Self-taught <span style="color: #B02B2C">Ruby on Rails</span> developer.</li>
       <li class="aboutlist">Earned a Neuroscience B.A. (Has fond memory of being bitten by a lab rat.)</li>
       <li class="aboutlist">Inspired by Marc Andreessen’s 2011 article "<%= link_to 'Why Software Is Eating the World', 'http://online.wsj.com/news/articles/SB10001424053111903480904576512250915629460', target: '_blank' %>".</li>
-      <li class="aboutlist">Likes health & tech.</li>
+      <li class="aboutlist">Likes eating watermelon & doing the moonwalk.</li>
     </ul>
 
     <br>
