refactored about and projects into partials

--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -3,3 +3,14 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 
+.projects-header {
+  font-family: Lato;
+  font-size: 36px;
+  color: #555 !important;
+  font-weight: 700;
+  margin-right: 750px;
+  padding-top: 150px;
+  float: right;
+  clear: both;
+  position: relative;
+}
