--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -3,119 +3,9 @@
 </div>
 
  -->
-<!-- about -->
-<a id="About"></a>
-<div class="about">
-  <div class="skillbox">
-    <h4 class="resources">What I Can Use</h4>
-    <ul class="skills">
-      <li><i class="fa fa-check fa-lg"></i>&nbsp;&nbsp;&nbsp;Ruby on Rails</li>
-      <li><i class="fa fa-check fa-lg"></i>&nbsp;&nbsp;&nbsp;CSS</li>
-      <li><i class="fa fa-check fa-lg"></i>&nbsp;&nbsp;&nbsp;HTML</li>
-      <li><i class="fa fa-check fa-lg"></i>&nbsp;&nbsp;&nbsp;HAML</li>
-      <li><i class="fa fa-check fa-lg"></i>&nbsp;&nbsp;&nbsp;Twitter Bootstrap</li>
-      <li><i class="fa fa-check fa-lg"></i>&nbsp;&nbsp;&nbsp;Git/GitHub</li>
-      <li><i class="fa fa-check fa-lg"></i>&nbsp;&nbsp;&nbsp;Heroku</li>
-      <li><i class="fa fa-check fa-lg"></i>&nbsp;&nbsp;&nbsp;Adobe Photoshop</li>
-    </ul>
-    <h4 class="resources">What I Am Improving On</h4>
-    <ul class="skills">
-      <li><i class="fa fa-minus fa-lg"></i>&nbsp;&nbsp;&nbsp;MySQL</li>
-      <li><i class="fa fa-minus fa-lg"></i>&nbsp;&nbsp;&nbsp;Javascript</li>
-      <!-- <li><i class="fa fa-minus fa-lg"></i>&nbsp;&nbsp;&nbsp;#</li>
-      <li><i class="fa fa-minus fa-lg"></i>&nbsp;&nbsp;&nbsp;#</li>
-      <li><i class="fa fa-minus fa-lg"></i>&nbsp;&nbsp;&nbsp;#</li>
-      <li><i class="fa fa-minus fa-lg"></i>&nbsp;&nbsp;&nbsp;#</li>
-      <li><i class="fa fa-minus fa-lg"></i>&nbsp;&nbsp;&nbsp;#</li> -->
-    </ul>
-  </div>
 
+<!-- About -->
+<%= render "about/bio" %>
 
-  <div class="bio">
-    <h1 class="bio-header">About Me</h1>
-    <br>
-    <ul class="aboutlist">
-      <li class="aboutlist">A <span style="color: #B02B2C">Ruby on Rails</span> developer.</li>
-      <li class="aboutlist">Earned a Neuroscience B.A. (Has fond memory of being bitten by a lab rat.)</li>
-      <li class="aboutlist">Inspired by Marc Andreessen’s 2011 article "<%= link_to 'Why Software Is Eating the World', 'http://online.wsj.com/news/articles/SB10001424053111903480904576512250915629460', target: '_blank' %>".</li>
-      <li class="aboutlist">Likes eating watermelon & doing the moonwalk.</li>
-    </ul>
-
-    <br>
-    <br>
-
-    <h3>How Am I Learning Web Development?</h3>
-    <ul class="aboutlist">
-      <h4 class="resources">Online Resources:</h4>
-      <li class="aboutlist"><%= link_to 'Codecademy.com', "http://www.codecademy.com", target: '_blank' %> </li>
-      <li class="aboutlist"><%= link_to 'Lynda.com', 'http://www.lynda.com', target: '_blank' %></li>
-      <li class="aboutlist"><%= link_to 'Railscasts.com', 'http://www.railscasts.com', target: '_blank' %></li>
-      <h4 class="resources">Books:</h4>
-      <li class="aboutlist"><i>Agile Web Development with Rails 4</i>&nbsp;&nbsp;(The Pragmatic Programmers)</li>
-      <li class="aboutlist"><%= link_to raw('<i>Ruby on Rails Tutorial</i> &nbsp; by Michael Hartl'),'http://ruby.railstutorial.org/ruby-on-rails-tutorial-book', target: '_blank' %></li>
-    </ul>
-</div> <!-- Bio end -->
-</div> <!-- About end -->
-
-
-<!-- carousel -->
-<a id="Projects"></a>
-<h1 class="projects-header">Projects<h1>
-<div class="caro">
-  <div id="carousel-projects" class="carousel slide container" data-ride="carousel" style=" margin: 0 auto">
-    <ol class="carousel-indicators" style="">
-      <li data-target="#carousel-projects" data-slide-to="0" class="active"></li>
-      <li data-target="#carousel-projects" data-slide-to="1"></li>
-      <li data-target="#carousel projects" data-slide-to="2"></li>
-    </ol>
-
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner">
-      <div class="item active">
-        <div class="inner-item">
-          <!--height:460px, width:800px-->
-          <%= link_to image_tag("rsz_inspirez.jpg", :alt => "http://inspirez.herokuapp.com"), "http://inspirez.herokuapp.com", :target => "_blank" %>
-        </div>
-        <div class="carousel-caption">
-          <p>- INSPIREZ -</p>
-          <p>Get inspired. Take a break and read a random quote or watch a YouTube video.</p>
-          <br>
-        </div>
-      </div>
-      <div class="item">
-        <div class="inner-item">
-          <%= link_to image_tag("sl.jpg"), "http://startups-mankindforward.herokuapp.com/", :target => "http://startups-mankindforward.herokuapp.com/" %>
-      </div>
-        <div class="carousel-caption">
-          <p>- Startup Landscapes -</p>
-          <p>A website for quick navigation of the continuously changing world of startups that displays current startups organized by industry. Uses the Crunchbase API.</p>
-          <br>
-        </div>
-      </div>
-      <!--<div class="item">
-        <div class="inner-item">
-          <%= link_to image_tag("rsz_aboutme.jpg", :alt => "about.me/melzhang"), "about.me/melzhang", :target => "_blank" %>
-        </div>
-        <div class="carousel-caption">
-          <p>About.me</p>
-        </div>
-      </div> -->
-    </div>
-
-    <!-- Controls -->
-    <a class="left carousel-control" href="#carousel-projects" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left">&lsaquo;</span>
-    </a>
-    <a class="right carousel-control" href="#carousel-projects" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right">&rsaquo;</span>
-    </a>
-  </div>
-</div>
-
-<script>
-  $(document).ready(function(){
-    $('.carousel').carousel();
-      interval: 3000
-  });
-</script>
-<!-- end carousel -->
+<!-- Projects -->
+<%= render "projects/portfolio" %>
