new portfolio gallery using hover effects by JS

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -110,7 +110,7 @@ li.links {
 .caro {
   margin-right: 80px;
   padding-top: 25px;
-  padding-bottom: 400px;
+  margin-bottom: 200px;
   float: right;
   clear: both;
   position: relative;
