--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -2,7 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-
+//carousel portfolio
 .projects-header {
   font-family: Lato;
   font-size: 36px;
@@ -14,3 +14,108 @@
   clear: both;
   position: relative;
 }
+
+
+
+
+//hover effect gallery
+
+.container {
+  position: relative;
+  width: 960px;
+  margin: 0 auto;
+  /* You can see the purpose of transition by resizing the window.  */
+  -webkit-transition: all 1s ease;
+  -moz-transition: all 1s ease;
+  -o-transition: all 1s ease;
+  transition: all 1s ease;
+}
+
+#filters {
+  margin:1%;
+  padding:0;
+  list-style:none;
+}
+
+  #filters li {
+    float:right;
+    clear: both;
+  }
+
+  #filters li span {
+    display: block;
+    padding:5px 20px;
+    text-decoration:none;
+    color:#666;
+    cursor: pointer;
+  }
+
+  #filters li span.active {
+    background: #e95a44;
+    color:#fff;
+  }
+
+#portfoliolist .portfolio {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -o-box-sizing: border-box;
+  width:40%;
+  margin:1%;
+  clear: both;
+  position: relative;
+  float:right;
+  overflow:hidden;
+  margin-right: 140px;
+  font-family: Lato;
+}
+
+  .portfolio-wrapper {
+    overflow:hidden;
+    position: relative !important;
+    background: #666;
+    cursor:pointer;
+  }
+
+  .portfolio img {
+    max-width:100%;
+    position: relative;
+  }
+
+  //hide its label by default
+  .portfolio .label {
+    position: absolute;
+    width: 100%;
+    height:40px;
+    bottom:-40px;
+  }
+
+    .portfolio .label-bg {
+      background: #8A8AE6;
+      width: 100%;
+      height:100%;
+      position: absolute;
+      top:0;
+      left:0;
+    }
+
+    .portfolio .label-text {
+      color:#fff;
+      position: relative;
+      z-index:500;
+      padding:5px 8px;
+    }
+
+      .portfolio .text-category {
+        display:block;
+        font-size:9px;
+      }
+
+      .portfolio .label-text a.text-title {
+        color:#fff;
+        text-decoration: none;
+            &:hover {
+              text-decoration: none;
+              background-color: transparent;
+        }
+
+    }
