--- a/app/views/projects/_portfolio.html.erb
+++ b/app/views/projects/_portfolio.html.erb
@@ -14,7 +14,7 @@
       <div class="item active">
         <div class="inner-item">
           <!--height:460px, width:800px-->
-          <%= link_to image_tag("rsz_inspirez.jpg", :alt => "http://inspirez.herokuapp.com"), "http://inspirez.herokuapp.com", :target => "_blank" %>
+          <%= link_to image_tag("inspirez_800_460.jpg", :alt => "http://inspirez.herokuapp.com"), "http://inspirez.herokuapp.com", :target => "_blank" %>
         </div>
         <div class="carousel-caption">
           <p>- INSPIREZ -</p>
