added personal website to portfolio

--- a/app/views/projects/_portfolio2.html.erb
+++ b/app/views/projects/_portfolio2.html.erb
@@ -17,7 +17,7 @@
       <div class="label">
         <div class="label-text">
           <a class="text-title">inspirez</a>
-          <span class="text-category">Get inspired. Take a break and read a random quote or watch a YouTube video.</span>
+          <span class="text-category">Get inspired. Take a break and read a random quote or watch a YouTube video. Tools: Ruby on Rails, HTML, CSS. </span>
         </div>
         <div class="label-bg"></div>
       </div>
@@ -27,11 +27,24 @@
 
   <div class="portfolio logo" data-cat="logo">
     <div class="portfolio-wrapper">
-      <%= link_to image_tag("sl.jpg"), "http://startups-mankindforward.herokuapp.com/", :target => "http://startups-mankindforward.herokuapp.com/" %>
+      <%= link_to image_tag("sl.jpg"), "http://melzhang.herokuapp.com/", :target => "http://melzhang.herokuapp.com/" %>
       <div class="label">
         <div class="label-text">
           <a class="text-title">Startup Landscapes</a>
-          <span class="text-category">List startups by industry. Uses the Crunchbase API.</span>
+          <span class="text-category">List startups by industry. Uses the Crunchbase API. Tools: Ruby on Rails, HTML, CSS. </span>
+        </div>
+        <div class="label-bg"></div>
+      </div>
+    </div>
+  </div>
+
+  <div class="portfolio logo" data-cat="logo">
+    <div class="portfolio-wrapper">
+      <%= link_to image_tag("pw.jpg"), "http://startups-mankindforward.herokuapp.com/", :target => "http://startups-mankindforward.herokuapp.com/" %>
+      <div class="label">
+        <div class="label-text">
+          <a class="text-title">My Personal Website</a>
+          <span class="text-category">Tools: Ruby on Rails, HTML, CSS, Twitter Bootstrap, Javascript, jQuery. </span>
         </div>
         <div class="label-bg"></div>
       </div>
