--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -63,7 +63,12 @@ html {
 
 .footer-linkedin {
   margin-left: 200px;
-  margin-top: -22px;
+  margin-top: -23px;
+
+}
+
+.fa-linkedin-square {
+  display: inline-block !important;
 }
 
 .footer-linkedin a {
@@ -82,23 +87,7 @@ html {
 }
 
 .footer-twitterbird a {
-  &:hover {
-    background-color: transparent;
-  }
-}
-
-
-.footer-bucketlistly {
-  position: absolute;
-  margin-left: 280px;
-  margin-top: -23px;
   display: inline-block !important;
-  height: 25px;
-  width: 25px;
-
-}
-
-.footer-bucketlistly a {
   &:hover {
     background-color: transparent;
   }
@@ -106,7 +95,7 @@ html {
 
 .footer-github {
   position: absolute;
-  margin-left: 280px;
+  margin-left: 240px;
   margin-top: -25px;
   display: inline-block !important;
   height: 25px;
