--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,9 +51,9 @@
   <div class="footer-linkedin">
       <a href="http://www.linkedin.com/in/melzhang/" style="color: white" target="_blank"><i class="fa fa-linkedin-square fa-2x"></i></a>
   </div>
-  <div class="footer-twitterbird">
+ <!--  <div class="footer-twitterbird">
     <%= link_to image_tag('twitter-m.jpg', :alt => "https://twitter.com/zeemelon"), "https://twitter.com/zeemelon", :target => "_blank" %>
-  </div>
+  </div> -->
   <!-- <div class="footer-bucketlistly">
     <%= link_to image_tag('bucketlistly-white.jpg', :alt => "http://www.bucketlistly.com/users/zeemelon"), "http://www.bucketlistly.com/users/zeemelon", :target => "_blank" %>
   </div> -->
