--- a/app/views/projects/_portfolio2.html.erb
+++ b/app/views/projects/_portfolio2.html.erb
@@ -1,16 +1,14 @@
-<!-- <ul id="filters" class="clearfix">
-  <li><span class="filter active" data-filter="app card icon logo web">All</span></li>
-  <li><span class="filter" data-filter="app">App</span></li>
-  <li><span class="filter" data-filter="card">Card</span></li>
-  <li><span class="filter" data-filter="icon">Icon</span></li>
-  <li><span class="filter" data-filter="logo">Logo</span></li>
-  <li><span class="filter" data-filter="web">Web</span></li>
-</ul> -->
 
 <a id="Projects"></a>
-<h1 class="projects-header">Projects<h1>
+<h1 class="projects-header">Projects</h1>
+
 
 <div id="portfoliolist">
+
+  <h1 class="projects-header">Websites</h1>
+
+
+
   <div class="portfolio logo" data-cat="logo">
     <div class="portfolio-wrapper">
       <%= link_to image_tag("inspirez_800_460.jpg", :alt => "http://inspirez.herokuapp.com"), "http://inspirez.herokuapp.com", :target => "_blank" %>
@@ -25,7 +23,7 @@
   </div>
 
 
-  <div class="portfolio logo" data-cat="logo">
+    <div class="portfolio logo" data-cat="logo">
     <div class="portfolio-wrapper">
       <%= link_to image_tag("sl.jpg"), "http://melzhang.herokuapp.com/", :target => "http://melzhang.herokuapp.com/" %>
       <div class="label">
@@ -38,13 +36,206 @@
     </div>
   </div>
 
-  <div class="portfolio logo" data-cat="logo">
+
+<div class="portfolio logo" data-cat="logo">
     <div class="portfolio-wrapper">
       <%= link_to image_tag("pw.jpg"), "http://startups-mankindforward.herokuapp.com/", :target => "http://startups-mankindforward.herokuapp.com/" %>
       <div class="label">
         <div class="label-text">
           <a class="text-title">My Personal Website</a>
           <span class="text-category">Tools: Ruby on Rails, HTML, CSS, Twitter Bootstrap, Javascript, jQuery. </span>
+        </div>
+        <div class="label-bg"></div>
+      </div>
+    </div>
+  </div>
+
+
+
+
+
+<h1 class="projects-header">Images designed for Mobogenie,<br>an Android Mobile App Store</h1>
+
+
+
+  <div class="portfolio logo" data-cat="logo">
+    <div class="portfolio-wrapper">
+      <div class="mgscreenshot"><%= image_tag("collegemain_small.png") %></div>
+      <!-- <div class="mgscreenshot"><%= image_tag("zombiemain.png") %></div> -->
+      <div class="label">
+        <div class="label-text">
+          <a class="text-title">Screenshot of College-themed App Collection Cover</a>
+          <span class="text-category">Screenshot of the image I designed for the college-themed app collection featured in Mobogenie, an Android app store.</span>
+        </div>
+        <div class="label-bg"></div>
+      </div>
+    </div>
+  </div>
+
+  <div class="portfolio logo" data-cat="logo">
+    <div class="portfolio-wrapper">
+      <div class="mgscreenshot"><%= image_tag("superzombiecollect_small.png") %></div>
+      <!-- <div class="mgscreenshot"><%= image_tag("zombiemain.png") %></div> -->
+      <div class="label">
+        <div class="label-text">
+          <a class="text-title">Screenshot of Game App Collection Covers</a>
+          <span class="text-category">Images I designed for 2 collections I curated, featured on the game collections page in Mobogenie, an Android app store.</span>
+        </div>
+        <div class="label-bg"></div>
+      </div>
+    </div>
+  </div>
+
+<div class="portfolio logo" data-cat="logo">
+    <div class="portfolio-wrapper">
+      <%= image_tag("BrainTraining_706x300.jpg") %>
+      <div class="label">
+        <div class="label-text">
+          <a class="text-title">Brain Training App Collection</a>
+          <span class="text-category">Collection cover featuring brain training and mental puzzle games.</span>
+        </div>
+        <div class="label-bg"></div>
+      </div>
+    </div>
+  </div>
+
+  <div class="portfolio logo" data-cat="logo">
+    <div class="portfolio-wrapper">
+      <%= image_tag("DisneyGames1_706x300.jpg") %>
+      <div class="label">
+        <div class="label-text">
+          <a class="text-title">Disney Games Collection</a>
+          <span class="text-category">Collection cover featuring disney games.</span>
+        </div>
+        <div class="label-bg"></div>
+      </div>
+    </div>
+  </div>
+
+<div class="portfolio logo" data-cat="logo">
+    <div class="portfolio-wrapper">
+      <%= image_tag("EndofSummer_706x300.jpg") %>
+      <div class="label">
+        <div class="label-text">
+          <a class="text-title">Collection for the End of Summer</a>
+          <span class="text-category">Cover for a collection featuring travel, food, and social apps and games.</span>
+        </div>
+        <div class="label-bg"></div>
+      </div>
+    </div>
+  </div>
+
+<div class="portfolio logo" data-cat="logo">
+    <div class="portfolio-wrapper">
+      <%= image_tag("Fashion_706x300.jpg") %>
+      <div class="label">
+        <div class="label-text">
+          <a class="text-title">Fashion Apps Collection</a>
+          <span class="text-category">Cover for a collection featuring apps related to shopping, clothing marketplaces, and fashion news.</span>
+        </div>
+        <div class="label-bg"></div>
+      </div>
+    </div>
+  </div>
+
+<div class="portfolio logo" data-cat="logo">
+    <div class="portfolio-wrapper">
+      <%= image_tag("College_706x300.jpg") %>
+      <div class="label">
+        <div class="label-text">
+          <a class="text-title">App Collection for College Students</a>
+          <span class="text-category">Cover for a collection of apps for the college student eager to succeed and have fun at the same time.</span>
+        </div>
+        <div class="label-bg"></div>
+      </div>
+    </div>
+  </div>
+
+<div class="portfolio logo" data-cat="logo">
+    <div class="portfolio-wrapper">
+      <%= image_tag("Music_706x300.jpg") %>
+      <div class="label">
+        <div class="label-text">
+          <a class="text-title">Music Streaming Apps Collection</a>
+          <span class="text-category">Cover for a collection featuring popular music streaming apps.</span>
+        </div>
+        <div class="label-bg"></div>
+      </div>
+    </div>
+  </div>
+
+<div class="portfolio logo" data-cat="logo">
+    <div class="portfolio-wrapper">
+      <%= image_tag("MichaelJackson_706x300.jpg") %>
+      <div class="label">
+        <div class="label-text">
+          <a class="text-title">Michael Jackson Apps and Games Collection</a>
+          <span class="text-category">Cover for a collection celebrating the King of Pop.</span>
+        </div>
+        <div class="label-bg"></div>
+      </div>
+    </div>
+  </div>
+
+<div class="portfolio logo" data-cat="logo">
+    <div class="portfolio-wrapper">
+      <%= image_tag("SpaceApps_706x300.jpg") %>
+      <div class="label">
+        <div class="label-text">
+          <a class="text-title">Space-Related App Collection</a>
+          <span class="text-category">Cover for a collection featuring apps such as NASA, Night Sky Tools, and Hubble Space Center.</span>
+        </div>
+        <div class="label-bg"></div>
+      </div>
+    </div>
+  </div>
+
+<div class="portfolio logo" data-cat="logo">
+    <div class="portfolio-wrapper">
+      <%= image_tag("SpaceGames_706x300.jpg") %>
+      <div class="label">
+        <div class="label-text">
+          <a class="text-title">Space-Themed Games Collection</a>
+          <span class="text-category">Cover for a collection featuring games whose worlds' take place in space.</span>
+        </div>
+        <div class="label-bg"></div>
+      </div>
+    </div>
+  </div>
+
+<div class="portfolio logo" data-cat="logo">
+    <div class="portfolio-wrapper">
+      <%= image_tag("SuperheroGames_706x300.jpg") %>
+      <div class="label">
+        <div class="label-text">
+          <a class="text-title">Superhero-Themed Games Collection</a>
+          <span class="text-category">Cover for a collection featuring superhero favorites in games such as MARVEL War of Heroes.</span>
+        </div>
+        <div class="label-bg"></div>
+      </div>
+    </div>
+  </div>
+
+  <div class="portfolio logo" data-cat="logo">
+    <div class="portfolio-wrapper">
+      <%= image_tag("YOLO_FelixB_706x300.jpg") %>
+      <div class="label">
+        <div class="label-text">
+          <a class="text-title">Goal Setting Apps Collection</a>
+          <span class="text-category">Cover for a collection of bucket list apps in the spirit of YOLO, you only live once.</span>
+        </div>
+        <div class="label-bg"></div>
+      </div>
+    </div>
+  </div>
+
+<div class="portfolio logo" data-cat="logo">
+    <div class="portfolio-wrapper">
+      <%= image_tag("ZombieGames_706x300.jpg") %>
+      <div class="label">
+        <div class="label-text">
+          <a class="text-title">Zombie-Themed Games Collection</a>
+          <span class="text-category">Cover for a collection of games full of walking dead.</span>
         </div>
         <div class="label-bg"></div>
       </div>
